add highlight toggle for hover and select

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
       <li class="seat"><i class="fa fa-stop fa-lg"></i></li>
     </ul>
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
