add basic header bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
+  <header id="navbar">
+    <h1 id="title">Airplane Seat Selector</h1>
+  </header>
+
   <div class="plane">
     <ul class="row">
       <li class="seat"><i class="fa fa-stop fa-lg"></i></li>
@@ -27,6 +31,10 @@
       <li class="seat"><i class="fa fa-stop fa-lg"></i></li>
       <li class="seat"><i class="fa fa-stop fa-lg"></i></li>
     </ul>
+  </div>
+
+  <div class="info">
+
   </div>
 
   <script src="app.js"></script>
