--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
   </div>
 
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
